--- a/01模板语法/02v-html 指令.html
+++ b/01模板语法/02v-html 指令.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>v-html 指令</title>
+    <title>使用 v-html 指令用于输出 html 代码</title>
     <script src="../js/vue.min.js"></script>
 </head>
 <body>
