--- a/01模板语法/04表达式.html
+++ b/01模板语法/04表达式.html
@@ -11,7 +11,7 @@
     {{5+5}}<br>
     {{ ok ? 'YES' : 'NO' }}<br>
     {{ message.split('').reverse().join('') }}
-    <div v-bind:id="'list-' + id">菜鸟教程</div>
+    <div v-bind:id="'list-' + id">vue.js教程</div>
     <a v-bind:href="url">百度</a>
 </div>
 
