--- a/01模板语法/05用户输入.html
+++ b/01模板语法/05用户输入.html
@@ -16,7 +16,7 @@
     new Vue({
         el: '#app',
         data: {
-            message: 'Runoob!'
+            message: 'king!'
         }
     })
 </script>
