--- a/01模板语法/01文本.html
+++ b/01模板语法/01文本.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>文本</title>
+    <title>vue.js文本</title>
     <script src="../js/vue.min.js"></script>
 </head>
 <body>
