--- a/01模板语法/01文本.html
+++ b/01模板语法/01文本.html
@@ -6,7 +6,7 @@
     <script src="../js/vue.min.js"></script>
 </head>
 <body>
-
+<!--数据绑定最常见的形式就是使用 {{...}}（双大括号）的文本插值-->
 <div id="app">
     <p>{{ message }}</p>
 </div>
