--- a/01模板语法/02v-html 指令.html
+++ b/01模板语法/02v-html 指令.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>使用 v-html 指令用于输出 html 代码</title>
+    <title>v-html指令</title>
     <script src="../js/vue.min.js"></script>
 </head>
 <body>
 
+<!--使用 v-html 指令用于输出 html 代码-->
 <div id="app">
     <div v-html="message"></div>
 </div>
