--- a/01模板语法/03v-bind 指令.html
+++ b/01模板语法/03v-bind 指令.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HTML 属性中的值应使用 v-bind 指令</title>
+    <title>v-bind 指令</title>
     <script src="../js/vue.min.js"></script>
 
     <style>
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-
+<!--HTML 属性中的值应使用 v-bind 指令-->
 <div id="app">
     <label for="r1">修改颜色</label>
     <input type="checkbox" v-model="class1" id="r1">
