--- a/01模板语法/04表达式.html
+++ b/01模板语法/04表达式.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+<!--split:把字符串转为数组
+reverse把数组内的元素颠倒
+join把数组转为字符串-->
 <div id="app">
     {{5+5}}<br>
     {{ ok ? 'YES' : 'NO' }}<br>
