--- a/01模板语法/05用户输入.html
+++ b/01模板语法/05用户输入.html
@@ -6,7 +6,7 @@
     <script src="../js/vue.min.js"></script>
 </head>
 <body>
-
+<!--input 输入框中我们可以使用 v-model 指令来实现双向数据绑定：-->
 <div id="app">
     <p>{{ message }}</p>
     <input v-model="message">
