--- a/01模板语法/07过滤器.html
+++ b/01模板语法/07过滤器.html
@@ -15,7 +15,7 @@
     new Vue({
         el: '#app',
         data: {
-            message: 'runoob'
+            message: 'king'
         },
         filters: {
             capitalize: function (value) {
