--- a/03条件语句/01v-if.html
+++ b/03条件语句/01v-if.html
@@ -8,12 +8,12 @@
 <body>
 
 <div id="app">
-    <p v-if="seen">现在你看到我了</p>
+    <p v-if="seen">认真学习</p>
 
     <template v-if="ok">
-        <h1>菜鸟教程</h1>
+        <h1>vue.js教程</h1>
         <p>学的不仅是技术，更是梦想！</p>
-        <p>哈哈哈，打字辛苦啊！！！</p>
+        <p>学完之后，做项目</p>
     </template>
 </div>
 
