--- a/04循环语句/01v-for 指令.html
+++ b/04循环语句/01v-for 指令.html
@@ -20,7 +20,7 @@
         el: '#app',
         data: {
             sites: [
-                { name: 'Runoob' },
+                { name: 'baidu' },
                 { name: 'Google' },
                 { name: 'Taobao' }
             ]
