--- a/04循环语句/02迭代对象.html
+++ b/04循环语句/02迭代对象.html
@@ -20,8 +20,8 @@
         el: '#app',
         data: {
             object: {
-                name: '菜鸟教程',
-                url: 'http://www.runoob.com',
+                name: 'vue.js教程',
+                url: 'http://www.163.com',
                 slogan: '学的不仅是技术，更是梦想！'
             }
         }
