--- a/01模板语法/04表达式.html
+++ b/01模板语法/04表达式.html
@@ -23,7 +23,7 @@ join把数组转为字符串-->
         el: '#app',
         data: {
             ok: true,
-            message: 'RUNOOB',
+            message: 'baidu',
             url: 'http://www.baidu.com',
             id : 1
         }
