--- a/05计算属性/01测试实例.html
+++ b/05计算属性/01测试实例.html
@@ -21,7 +21,7 @@
     })
     // 调用 setter， vm.name 和 vm.url 也会被对应更新
     vm.name = '你好';
-    vm.url=" http://www.runoob.com";
+    vm.url=" http://www.baidu.com";
     document.write('name: ' + vm.name);
     document.write('<br>');
     document.write('url: ' + vm.url);
