--- a/07事件处理器/01v-on.html
+++ b/07事件处理器/01v-on.html
@@ -6,7 +6,7 @@
     <script src="../js/vue.min.js"></script>
 </head>
 <body>
-
+<!--事件监听可以使用 v-on 指令-->
 <div id="app">
     <button v-on:click="counter += 1">增加 1</button>
     <p>这个按钮被点击了 {{ counter }} 次。</p>
