--- a/08表单/01输入框.html
+++ b/08表单/01输入框.html
@@ -21,8 +21,8 @@
     new Vue({
         el: '#app',
         data: {
-            message: 'Runoob',
-            message2: '菜鸟教程\r\nhttp://www.runoob.com'
+            message: 'baidu',
+            message2: 'http://www.baidu.com'
         }
     })
 </script>
