--- a/06样式绑定/04内联样式.html
+++ b/06样式绑定/04内联样式.html
@@ -8,7 +8,7 @@
 <body>
 
 <div id="app">
-    <div v-bind:style="{ color: activeColor, fontSize: fontSize + 'px' }">菜鸟教程</div>
+    <div v-bind:style="{ color: activeColor, fontSize: fontSize + 'px' }">内联样式</div>
 </div>
 
 <script>
