--- a/07事件处理器/02JavaScript 方法.html
+++ b/07事件处理器/02JavaScript 方法.html
@@ -8,7 +8,7 @@
 <body>
 
 <div id="app">
-    <!-- `greet` 是在下面定义的方法名 -->
+    <!-- `v-on 可以接收一个定义的方法来调用 greet` 是在下面定义的方法名  -->
     <button v-on:click="greet">Greet</button>
 </div>
 
