--- a/08表单/02复选框.html
+++ b/08表单/02复选框.html
@@ -13,7 +13,7 @@
     <label for="checkbox">{{ checked }}</label>
 
     <p>多个复选框：</p>
-    <input type="checkbox" id="runoob" value="Runoob" v-model="checkedNames">
+    <input type="checkbox" id="runoob" value="163" v-model="checkedNames">
     <label for="runoob">Runoob</label>
     <input type="checkbox" id="google" value="Google" v-model="checkedNames">
     <label for="google">Google</label>
