--- a/08表单/03单选按钮.html
+++ b/08表单/03单选按钮.html
@@ -8,9 +8,9 @@
 <body>
 
 <div id="app">
-    <input type="radio" id="runoob" value="Runoob" v-model="picked">
+    <input type="radio" id="163" value="163" v-model="picked">
 
-    <label for="runoob">Runoob</label>
+    <label for="runoob">163</label>
     <br>
     <input type="radio" id="google" value="Google" v-model="picked">
 
@@ -23,7 +23,7 @@
     new Vue({
         el: '#app',
         data: {
-            picked : 'Runoob'
+            picked : '163'
         }
     })
 </script>
