--- a/08表单/04select 列表.html
+++ b/08表单/04select 列表.html
@@ -10,7 +10,7 @@
 <div id="app">
     <select v-model="selected" name="fruit">
         <option value="">选择一个网站</option>
-        <option value="www.runoob.com">Runoob</option>
+        <option value="www.baidu.com">baidu</option>
         <option value="www.google.com">Google</option>
     </select>
 
