--- a/09 组件/01全局组件.html
+++ b/09 组件/01全局组件.html
@@ -10,6 +10,10 @@
     <seraph></seraph>
 </div>
 
+<div id="app2">
+    <seraph></seraph>
+</div>
+
 <script>
     // 注册
     Vue.component('seraph', {
@@ -18,6 +22,10 @@
     // 创建根实例
     new Vue({
         el: '#app'
+    })
+
+    new Vue({
+        el: '#app2'
     })
 </script>
 </body>
