--- a/01模板语法/01文本.html
+++ b/01模板语法/01文本.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>vue.js文本</title>
+    <!--1，引入文件-->
     <script src="../js/vue.min.js"></script>
 </head>
 <body>
