--- a/05计算属性/01测试实例.html
+++ b/05计算属性/01测试实例.html
@@ -20,7 +20,7 @@
         }
     })
     // 调用 setter， vm.name 和 vm.url 也会被对应更新
-    vm.name = '你好';
+    vm.name = '哈哈';
     vm.url=" http://www.baidu.com";
     document.write('name: ' + vm.name);
     document.write('<br>');
