--- a/07事件处理器/03内联 JavaScript.html
+++ b/07事件处理器/03内联 JavaScript.html
@@ -8,16 +8,19 @@
 <body>
 
 <div id="app">
-    <button v-on:click="say('hi')">Say hi</button>
+    <button v-on:click="say('hi')">{{name}}</button>
     <button v-on:click="say('what')">Say what</button>
 </div>
 
 <script>
     new Vue({
         el: '#app',
+        data:{
+            name:"aaa"
+        },
         methods: {
             say: function (message) {
-                alert(message)
+               this.name="bbbbbbbbbbbbb";
             }
         }
     })
