--- a/04循环语句/01v-for 指令.html
+++ b/04循环语句/01v-for 指令.html
@@ -21,7 +21,7 @@
         data: {
             sites: [
                 { name: 'baidu' },
-                { name: 'Google' },
+                { name: 'Googtle' },
                 { name: 'Taobao' }
             ]
         }
