--- a/06样式绑定/02多个 class.html
+++ b/06样式绑定/02多个 class.html
@@ -27,7 +27,7 @@
         el: '#app',
         data: {
             isActive: true,
-            hasError: true
+            hasError: false
         }
     })
 </script>
