--- a/07事件处理器/02JavaScript 方法.html
+++ b/07事件处理器/02JavaScript 方法.html
@@ -9,7 +9,7 @@
 
 <div id="app">
     <!-- `v-on 可以接收一个定义的方法来调用 greet` 是在下面定义的方法名  -->
-    <button v-on:click="greet">Greet</button>
+    <button v-on:click="greet">{{name}}</button>
 </div>
 
 <script>
@@ -22,11 +22,12 @@
         methods: {
             greet: function (event) {
                 // `this` 在方法里指当前 Vue 实例
-                alert('Hello ' + this.name + '!')
+                //alert('Hello ' + this.name + '!')
                 // `event` 是原生 DOM 事件
-                if (event) {
+                this.name = this.name+"哈哈";
+               /* if (event) {
                     alert(event.target.tagName)
-                }
+                }*/
             }
         }
     })
