--- a/08表单/02复选框.html
+++ b/08表单/02复选框.html
@@ -14,7 +14,7 @@
 
     <p>多个复选框：</p>
     <input type="checkbox" id="runoob" value="163" v-model="checkedNames">
-    <label for="runoob">Runoob</label>
+    <label for="runoob">163</label>
     <input type="checkbox" id="google" value="Google" v-model="checkedNames">
     <label for="google">Google</label>
     <input type="checkbox" id="taobao" value="Taobao" v-model="checkedNames">
