--- a/09 组件/04动态 Prop.html
+++ b/09 组件/04动态 Prop.html
@@ -14,6 +14,12 @@
     </div>
 </div>
 
+<!--用 v-bind 动态绑定 props 的值到父组件的数据中。每当父组件的数据变化时，该变化也会传导给子组件：
+1,当input输入数据的时候，因为v-model的原因，input把值给了parentMsg，parentMsg再给全局组件的message赋值。
+2,全局数据因为props，所以message接受数据，然后在template内部显示
+
+
+-->
 <script>
     // 注册
     Vue.component('child', {
