--- a/01模板语法/06点击事件.html
+++ b/01模板语法/06点击事件.html
@@ -9,7 +9,7 @@
 
 <div id="app">
     <p>{{ message }}</p>
-    <button v-on:click="reverseMessage">反转字符串</button>
+    <button v-on:click="reverseMessage()">反转字符串</button>
 </div>
 
 <script>
