--- a/06样式绑定/03数组语法.html
+++ b/06样式绑定/03数组语法.html
@@ -21,13 +21,15 @@
 </div>
 
 <script>
-    new Vue({
+  var vue=  new Vue({
         el: '#app',
         data: {
             activeClass: 'active',
             errorClass: 'text-danger'
         }
     })
+
+  //vue.activeClass="active2";
 </script>
 </body>
 
