--- a/07事件处理器/03内联 JavaScript.html
+++ b/07事件处理器/03内联 JavaScript.html
@@ -20,7 +20,7 @@
         },
         methods: {
             say: function (message) {
-               this.name="bbbbbbbbbbbbb";
+               this.name=message;
             }
         }
     })
