--- a/09 组件/05自定义事件.html
+++ b/09 组件/05自定义事件.html
@@ -38,10 +38,10 @@
             }
         },
     })
-    new Vue({
+   var vue= new Vue({
         el: '#counter-event-example',
         data: {
-            total: 133
+            total: 0
         },
         methods: {
             incrementTotal: function () {
