--- a/01模板语法/02v-html 指令.html
+++ b/01模板语法/02v-html 指令.html
@@ -16,7 +16,7 @@
     new Vue({
         el: '#app',
         data: {
-            message: '<h1>菜鸟教程</h1>'
+            message: '<h1>教程</h1>'
         }
     })
 </script>
