--- a/09 组件/03Prop.html
+++ b/09 组件/03Prop.html
@@ -18,7 +18,7 @@
         // 声明 props
         props: ['message'],
         // 同样也可以在 vm 实例中像 “this.message” 这样使用
-        template: '<span>{{ message }}</span>'
+        template: '<h1>{{ message }}</h1>'
     })
     // 创建根实例
     new Vue({
